--- a/style.css
+++ b/style.css
@@ -3,26 +3,10 @@
 /* 共通スタイル */
 html {
   font-size: 100%;
-
   background-image: linear-gradient(184deg, rgba(255, 255, 255, 0), rgba(243, 247, 251, 0.79) 0%, rgba(242, 246, 251, 0.79) 13%, rgba(240, 245, 251, 0.79) 43%, rgba(207, 224, 246, 0.79) 92%, rgba(233, 240, 250, 0.79));
 }
 
-main {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh;
-  margin: 0;
-  padding: 0;
-  text-align: center;
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-/* imgをHTMLに入れていて削除したのですが、imgCSSを削除するとヘッダーが乱れ原因がわかりません。 */
-
 /* ヘッダ（ロゴ・ウェブアイコン） */
-
 header {
   display: flex;
   justify-content: left;
@@ -36,12 +20,25 @@ header {
   margin:10px
 }
 
-
 .bi-apple {
   font-size: 78px;
   margin-left: -5px; /* 位置調整 */
   margin-right: auto; 
 }
+
+/* メイン部分 */
+main {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  margin: 0;
+  padding: 0;
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 
 .h2Container {
   width: 100%;
@@ -53,9 +50,9 @@ h2 {
   margin-left: 10px;
   color: rgb(63, 86, 86) !important;
   margin-bottom: 10px;
-      text-align: left !important;
-      margin-right: 500px;
-      width: 1000px;
+    text-align: left !important;
+    margin-right: 500px;
+    width: 1000px;
 }
 
 main  {
@@ -164,7 +161,7 @@ button:active {
 
 #outputText {
   text-align: left;
-   max-height: 400px;
+  max-height: 400px;
   margin-top: 10px;
   margin-right: 10px;
   margin-left: 10px;
@@ -184,17 +181,16 @@ button:active {
   margin-bottom: 10px;
 }
 
-
 #referenceBox {
   width: 1000px;
-  height: 100px;
+  height: 150px;
   border: 1px solid black; 
   border-radius: 1rem;
-
 }
 
 #TitleForAppendix {
   margin-left: 20px;
+  margin-top: 10px;
   display: flex;
   justify-content: left;
   text-align: left;
@@ -202,11 +198,13 @@ button:active {
 
 #outputRules {
   margin-left: 30px;
+  margin-right: 30px;
   display: flex;
   justify-content: left;
   text-align: left;
   margin-top:10px;
-  margin-bottom: 50px;
+  margin-bottom: 10px;
+  height: fit-content;
 }
 
 
