--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ html {
   background-image: linear-gradient(184deg, rgba(255, 255, 255, 0), rgba(243, 247, 251, 0.79) 0%, rgba(242, 246, 251, 0.79) 13%, rgba(240, 245, 251, 0.79) 43%, rgba(207, 224, 246, 0.79) 92%, rgba(233, 240, 250, 0.79));
 }
 
-/* ヘッダ（ロゴ・ウェブアイコン） */
+/* ヘッダ（ロゴ(h1タグ付き)・ウェブアイコン） */
 header {
   display: flex;
   justify-content: left;
@@ -46,8 +46,10 @@ main {
 }
 
 h2 {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-weight: 100;
   font-size: 15px !important;
-  margin-left: 10px;
+  margin-left: 8px;
   color: rgb(63, 86, 86) !important;
   margin-bottom: 10px;
     text-align: left !important;
@@ -206,7 +208,6 @@ button:active {
   margin-bottom: 10px;
   height: fit-content;
 }
-
 
 /* フッタエリア */
 footer {
